# logger_setup

./: .gitignore  logger.py  logger_setup.py  pyproject.toml  setup.py
src/commonlog/: __init__.py  logger_setup.py
